# MSPM0_25E

./: .clang-format  .clangd  CMakeLists.txt  build.py  compile_flags.txt  download.py
BSP/: syscalls.c
BSP/ti/devices/msp/m0p/: mspm0g350x.h
Control/: pid.c  pid.h
Device/: tb6612.h
Device/encoder/: encoder.c  encoder.h
Device/gray_nomcu/: gray_nomcu.c  gray_nomcu.h
Device/oled/: OLED.c  OLED.h
Driver/: device_linker.cmd  driver.h  gpio.c  mspm0_25e.syscfg  nvic.c  spi.c  ti_msp_dl_config.c  ti_msp_dl_config.h  uart.c
Driver_Framework/: dev_model_core.c  dev_model_core.h
Driver_Framework/i2c/: df_iic.c  df_iic.h
Driver_Framework/key/: df_key.c  df_key.h
Driver_Framework/spi/: df_spi.h
Middleware/shell/: shell.c
app/: control.c  control.h  init.c  irq.c  main.c  main.h
